More changes in response to Inge and Nic comments

--- a/index/02-chap2.Rmd
+++ b/index/02-chap2.Rmd
@@ -32,10 +32,10 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 # Introduction {#background}
 
 ## The history of body mass index
-Although body fatness (adiposity) has long been associated with adverse health, the use of the term body mass index (BMI), is relatively recent. BMI is thought to have been first defined in 1972 by Ancel Keys[@Blackburn2014]. This term was given to define the ratio of weight in kilograms over the square of the height in metres. This measure was found to reflect overall body fatness well, while being easy and cheap to measure. The World Health Organization first defined the BMI categories in 1995[@WHO1995] used today: the National Health Service (NHS) defines a body mass index (BMI) of 25 kg/m^2^ as having overweight and 30 kg/m^2^ or higher as having obesity. These bounds were chosen based on associations with mortality. The average BMI of the UK adult population is ~27kg/m^2^[@Wade2018], which is in the 'overweight' category. Overweight is also more common than 'normal-weight' in many other higher-income countries[@NCD-RisC2016], and prevalence of overweight is increasing in lower-income countries[@Templin2019]. It is currently estimated that 40% of adults in the United States and 26% of adults in the United Kingdom have obesity[@Bluher2019]. As of 2016, the number of individuals globally with obesity surpassed 650 million[@TheLancetPublicHealth2018]. 
+Although body fatness (adiposity) has long been associated with adverse health, the use of the term body mass index (BMI), is relatively recent. BMI is thought to have been first defined in 1972 by Ancel Keys[@Blackburn2014]. This term was given to define the ratio of weight in kilograms over the square of the height in metres. This measure was found to reflect overall body fatness well, while being easy and cheap to measure. The World Health Organization first defined the BMI categories in 1995[@WHO1995] used today: the National Health Service (NHS) defines a body mass index (BMI) of 25 kg/m^2^ as having overweight and 30 kg/m^2^ or higher as having obesity. These bounds were chosen based on associations with mortality. The average BMI of the UK adult population is ~27kg/m^2^[@Wade2018], which is in the 'overweight' category. Overweight is also more common than 'normal-weight' in many other higher-income countries[@NCD-RisC2016], and prevalence of overweight is increasing in lower-income countries[@Templin2019]. It is currently estimated that 40% of adults in the United States have obesity, with 26% of the population from the United Kingdom having obesity[@Bluher2019]. As of 2016, the number of individuals globally with obesity surpassed 650 million[@TheLancetPublicHealth2018]. 
 
 ## Cardiovascular disease (CVD) is the leading cause of deaths worldwide {#CVD-stats}
-Diseases affecting the heart and blood vessels are the major cause of mortality in many countries[@BritishHeartFoundation2021]. In 2019, global deaths from coronary heart disease (CHD) and stroke amounted to ~9 million and ~6.5 million deaths, respectively[@BritishHeartFoundation2021]. Current known risk factors for such diseases include smoking, physical inactivity, poor diet and high cholesterol[@Virani2021]. Overweight and obesity are also well established risk factors for such diseases and are now considered the leading years lived with disability and injury risk factors in the United States[@Virani2021]. Various studies have found a link between adiposity and cardiovascular risk through various study designs. For example, large observational studies have found that adults with overweight or obesity have a higher risk of cardiovascular events and death from cardiovascular disease[@Khan2018]. Another study found that an average increase in BMI of 4 kg/m^2^ across a population increased the odds of ischaemic heart disease by 20-30%[@Nordestgaard2012]. 
+Diseases affecting the heart and blood vessels are the major cause of mortality in many countries[@BritishHeartFoundation2021]. In 2019, global deaths from coronary heart disease (CHD) and stroke amounted to ~9 million and ~6.5 million deaths, respectively[@BritishHeartFoundation2021]. Current known risk factors for cardiovascular diseases include smoking, a sedentary lifestyle, poor diet and high cholesterol[@Virani2021]. Overweight and obesity are also well established risk factors for such diseases. Obesity leads the years lived with disability and injury risk factors in the United States[@Virani2021]. Various studies have found a link between adiposity and cardiovascular risk through various study designs. For example, large observational studies have found that adults with overweight or obesity have a higher risk of cardiovascular events and death from cardiovascular disease[@Khan2018]. Another study found that an average increase in BMI of 4 kg/m^2^ across a population increased the odds of ischaemic heart disease by 20-30%[@Nordestgaard2012]. 
 
 ## Mendelian randomisation can be used to explore causality
 Risk factors have often been identified through observational associations. Observational studies are often limited by bias, confounding and reverse causation[@Davies2018]. Mendelian randomisation (MR) is a technique which exploits the random assortment of alleles to estimate the causal association between a modifiable risk factor and disease outcomes. It can be likened to a natural randomised controlled trial (RCT)[@Gill2020]. This technique is widely implemented due to the availability of genetic data in large cohorts, such as in ~500,000 UK Biobank participants[@Bycroft2018]. An example of how MR and RCTs can be used to determine causality is shown in Figure \@ref(fig:MR-CVevent), using BMI and cardiovascular events as an example[@Doney2009]. Here, genotypes that are associated with BMI can be used. These genotypes should only be associated with BMI and not other confounding factors. If people with genotypes which are associated with higher BMI also have higher rates of cardiovascular events, it is likely that the relationship between BMI and cardiovascular events is causal. Although a useful technique in exploring causality, MR has its own biases and limitations, therefore other lines of evidence and study designs such as RCTs are required. In an RCT, if a weight loss intervention reduces BMI compared to the control group, and also reduces the rate of cardiovascular events, this also supports a causal role of BMI in the onset of cardiovascular events. The RCT is considered gold standard in understanding causality, however these trials are expensive and take a long time due to the time needed to follow up participants.
@@ -52,7 +52,7 @@ include_graphics(path = "figure/Intro_background/BMI_MR_RCT_CVevent.png", dpi = 
 As indicated above, Mendelian randomisation can be used to estimate the causal relationship of BMI on various outcomes. There are strong correlations between BMI and more direct measures of fat mass measured by dual-energy X-ray absorptiometry (DXA)[@Bell2018], such as total fat mass index and regional fat mass indices. Due to the specialised equipment needed for fat mass measures, BMI is often much more widely available within cohort studies, trials and in the clinic. Environmental factors are well known to explain a large amount of variance in BMI, but genetic variants also influence BMI. Monogenic obesity was first identified where mutations in the ob (leptin) gene[@Zhang1994] lead to mice having obesity. This was later discovered to be because leptin was secreted by adipose tissue and was found to influence food consumption[@Friedman1998]. The first genome-wide association study (GWAS) for obesity traits was performed in 2007 for around 5,000 individuals[@Scuteri2007], which found evidence that 10 SNPs were associated with BMI. Since then, GWAS have been performed in increasingly larger cohort sizes[@Locke2015], with the largest and most recent GWAS performed in 2018 by Yengo et al.[@Yengo2018]. This GWAS found 941 near-independent genetic variants which associate with BMI. These have been shown to explain around 6% of the variance in BMI. Of these SNPs, 656 are considered as primary associations[@Yengo2018].
 
 ## Types of CVD
-As indicated in section \@ref(CVD-stats), CHD and stroke affect millions of people worldwide every year. CVD is used as a term to describe the group of diseases which affect the heart or blood vessels. Within CVD there are various diseases which range in their clinical presentation and pathology. CHD (also known as coronary artery disease (CAD) or ischaemic heart disease (IHD)) is caused by a build up of plaques in the arteries (atherosclerosis). These plaques are caused by low density lipoproteins (LDLs) accumulating in the intima of the arteries, where they undergo oxidation[@Bentzon2014]. This then activates immune response and macrophages and lymphocytes also accumulate within the intima[@Badimon2012]. The plaques build in size and may eventually rupture the endothelium, initiating platelet activation and thrombus formation (arterial thrombosis, Figure \@ref(fig:thrombi-cartoon)A), thereby causing a heart attack. Other types of CVD include stroke, which can be either ischaemic (another form of arterial thrombosis) or haemorrhagic. Arterial thrombi are estimated to be composed of 31% platelets[@Chernysh2020].
+As indicated in section \@ref(CVD-stats), CHD and stroke affect millions of people worldwide every year. CVD is used as a term to describe the group of diseases which affect the heart or blood vessels. Within CVD there are various diseases which range in their clinical presentation and pathology. CHD (also referred to as coronary artery disease (CAD) or ischaemic heart disease (IHD)) is caused by a build up of plaques in the arteries (atherosclerosis). These plaques are caused by low density lipoproteins (LDLs) accumulating in the intima of the arteries, where they undergo oxidation[@Bentzon2014]. This then activates immune response and macrophages and lymphocytes also accumulate within the intima[@Badimon2012]. The plaques build in size and may eventually rupture the endothelium, initiating platelet activation and thrombus formation (arterial thrombosis, Figure \@ref(fig:thrombi-cartoon)A), thereby causing a heart attack. Other types of CVD include stroke, which can be either ischaemic (another form of arterial thrombosis) or haemorrhagic. Arterial thrombi are estimated to be composed of 31% platelets[@Chernysh2020].
 
 Thrombi can also form in veins (venous thromboembolism/VTE), thereby causing deep venous thrombosis (DVT) when the thrombus is in the legs or pulmonary embolism when an embolus becomes lodged in the lungs. Unlike arterial thrombi, venous thrombi form low shear rates[@Koupenova2017a]. DVT is thought to start in the legs close to the valves as these are areas of stasis and hypoxia[@Esmon2009; @Stone2017]. This slowing of the blood reduces oxygen tension and increases haematocrit[@Stone2017]. The stasis and hypoxia also lead to downregulation of anticaogulant proteins such as thrombomodulin and endothelial protein C receptor (EPCR)[@Stone2017] and an upregulation of procoagulant proteins such as the adhesion molecule P-selectin. Venous thrombi mainly consist of a red cell dense fibrous clot (Figure \@ref(fig:thrombi-cartoon)B). Despite not as highly present in venous thrombi as arterial thrombi, platelets still play a role and form an inner layer of the thrombus[@Stone2017].
 
@@ -119,10 +119,10 @@ include_graphics(path = "figure/Intro_background/Sysmex_IPF.png", dpi = NA)
 ```
 
 ## Platelet primers
-Platelets express receptors for various circulating molecules. Previous studies have reported that a range of soluble ligands, growth factors and cytokines which can enhance platelet function are elevated in obesity[@Maury2010a]. These ‘platelet primers’ include insulin-like growth factor-1 (IGF-1)[@Frystyk1995; @Hers2007] and thrombopoietin (TPO)[@Blair2015; @Pasquet2000]. There is evidence other chemokines may be able to activate platelets. The C-C motif chemokine receptor 4 (CCR4) receptor is activated by the chemokines macrophage derived chemokine (MDC/CCL22) and thymus and activation-regulated chemokine (TARC/CCL17)[@Kowalska2000; @Abi-Younes2001]. There is observational evidence that higher BMI is positively associated with circulating levels of MDC[@Kitahara2014]. These chemokines are important for chemotaxis of leukocytes. It has also been observed that these chemokines can activate platelets as measured in platelet aggregation and calcium mobilisation experiments[@Abi-Younes2001]. It is unclear how these chemokines are able to exert effects. Known platelet primers (e.g. TPO) potentiate platelet activation through activation of the lipid kinase phosphoinositide-3-kinase (PI3K) pathway[@Blair2015; @Pasquet2000]. This activation leads to recruitment of PH-domain proteins including protein kinase B (PKB/Akt) to the plasma membrane among other downstream regulators. PKB is subsequently phosphorylated on Threonine^308^ and Serine^473^ residues leading to its activation[@Hemmings2015]. Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A~2~ (TxA~2~) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2)[@Ezumi1998; @VanWilligen2000]. It is possible that these pathways are also important in signalling via CCR4.
+Platelets express receptors for various circulating molecules. Previous studies have reported that a range of soluble ligands, growth factors and cytokines which can enhance platelet function are elevated in obesity[@Maury2010a]. These ‘platelet primers’ include insulin-like growth factor-1 (IGF-1)[@Frystyk1995; @Hers2007] and thrombopoietin (TPO)[@Blair2015; @Pasquet2000]. There is evidence other molecules such as chemokines may be able to activate platelets. The C-C motif chemokine receptor 4 (CCR4) receptor is activated by the chemokines macrophage derived chemokine (MDC/CCL22) and thymus and activation-regulated chemokine (TARC/CCL17)[@Kowalska2000; @Abi-Younes2001]. There is observational evidence that higher BMI is positively associated with circulating levels of MDC[@Kitahara2014]. These chemokines are important for chemotaxis of leukocytes. It has also been observed that these chemokines can activate platelets as measured in platelet aggregation and calcium mobilisation experiments[@Abi-Younes2001]. It is unclear how these chemokines are able to exert effects. Known platelet primers (e.g. TPO) potentiate platelet activation through activation of the lipid kinase phosphoinositide-3-kinase (PI3K) pathway[@Blair2015; @Pasquet2000]. This activation leads to recruitment of PH-domain proteins including protein kinase B (PKB/Akt) to the plasma membrane among other downstream regulators. PKB is subsequently phosphorylated on Threonine^308^ and Serine^473^ residues leading to its activation[@Hemmings2015]. Another pathway that has been implicated in platelet priming effects is the mitogen-activated protein kinase (MAPK) pathway. TPO can enhance thromboxane A~2~ (TxA~2~) synthesis through increasing the activation of extracellular signal regulated kinase (ERK2)[@Ezumi1998; @VanWilligen2000]. It is possible that these pathways are also important in signalling via CCR4.
 
-## Mechanisms of obesity-related disease
-It is not fully understood how a high BMI might lead to changes in platelet function. Inflammatory mediators could be one such mechanism due to likely interactions between inflammatory mediators and platelets in the blood. Obesity commonly presents with a state of low-grade chronic inflammation. There are two types of fat: white adipose tissue (WAT) and brown adipose tissue (BAT). WAT secretes proteins and peptides which have pro-inflammatory effects[@Cercato2019; @Kern2001]. There is evidence that obesity is associated with increases in interleukin-6 (IL-6), tumour necrosis factor-α (TNF-α), therefore supporting a pro-inflammatory state[@Esser2014]. Previous studies have also identified a causal link between higher BMI and higher circulating levels of the inflammatory molecule C-reactive protein (CRP)[@Timpson2011] and leptin[@Zaghlool2021], further suggesting these effects are BMI driven. More recent studies have used MR and have found an effect of BMI on a range of cytokines[@Kalaoja2021]. As platelet activation can be modified by inflammatory mediators and there is evidence for a causal relationship between BMI and CRP/cytokines, it is likely that inflammation could mediate this effect.
+## Mechanisms of obesity-related alterations in platelet function
+It is not fully understood whether a high BMI leads to a change in platelet function, and if it does, what mechanisms are involved. Inflammatory mediators could be one such mechanism due to likely interactions between inflammatory mediators and platelets in the blood. Obesity commonly presents with a state of low-grade chronic inflammation. There are two types of fat: white adipose tissue (WAT) and brown adipose tissue (BAT). WAT secretes proteins and peptides which have pro-inflammatory effects[@Cercato2019; @Kern2001]. There is evidence that obesity is associated with increases in interleukin-6 (IL-6), tumour necrosis factor-α (TNF-α), therefore supporting a pro-inflammatory state[@Esser2014]. Previous studies have also identified a causal link between higher BMI and higher circulating levels of the inflammatory molecule C-reactive protein (CRP)[@Timpson2011] and leptin[@Zaghlool2021], further suggesting these effects are BMI driven. More recent studies have used MR and have found an effect of BMI on a range of cytokines[@Kalaoja2021]. As platelet activation can be modified by inflammatory mediators and there is evidence for a causal relationship between BMI and CRP/cytokines, it is likely that inflammation could mediate this effect.
 
 ## The role of circulating platelet primers and disease
 Recent studies have used large cohorts of people to identify SNPs which are associated with changes in levels of certain proteins. These are known as protein Quantitative Trait Loci (pQTL)[@Sun2018]. Sun et al. identified 1,927 genetic associations with 1,478 proteins. As a result of these pQTLs, there have been numerous studies that have been able to estimate causal effects of proteins in disease by using two sample MR. For a two sample MR, the exposure are measured in a separate cohort from the cohort of the outcome. An example of this is linking the interleukin-6 receptor (IL6R) to diseases such as rheumatoid arthritis and coronary artery disease[@Bretherick2020]. The chemokines MDC and TARC both have SNPs which are associated with their levels[@Sun2018]. MDC and TARC have been implicated in platelet hyperactivity, however it is unknown whether raised levels of MDC and TARC would have clinical implications such as a role in ischaemic heart disease. As a polymorphism in the receptor for MDC and TARC (CCR4 receptor) has been implicated in myocardial infarction[@Noori2018], it is important to see how raised levels of MDC and TARC would relate to CVD outcomes. 
