--- a/index/03-chap3.Rmd
+++ b/index/03-chap3.Rmd
@@ -63,11 +63,11 @@ INTERVAL is a prospective cohort study that initially aimed to test the safety o
 
 ### Assessment of BMI and covariables
 
-Participants completed online questionnaires wherein they reported their height and weight. BMI was calculated as weight in kilograms divided by the square of their height in metres (kg/m^2^). Available covariables were age, sex, previous or current smoking frequency (in three categories of: never, occasional, most days or every day) and alcohol intake frequency (in four categories of: rarely, less than once a week, 1-2 times a week, 3-5 times a week or most days for the proteomics analysis, or three categories of never, previous and current in the platelet trait analysis). These covariables were chosen as they were measured in the INTERVAL collection and are measures which are thought to influence adiposity and cardiometabolic health[@Bell2018a].
+Participants completed online questionnaires wherein they reported their height and weight. BMI was calculated as weight in kilograms divided by the square of their height in metres (kg/m^2^). Available covariables were age, sex, previous or current smoking frequency (in three categories of: never, occasional, most days or every day) and alcohol intake frequency (in four categories of: rarely, less than once a week, 1-2 times a week, 3-5 times a week or most days for the proteomics analysis, or three categories of never, previous and current in the platelet trait analysis). These variables were selected to include in analyses as covariables as they were available in the INTERVAL study and likely affect both adiposity and cardiometabolic health[@Bell2018a].
 
 ### Genetic data and instrument for BMI
 
-INTERVAL participant genotyping was performed on the Affymetrix GeneTitan Multi-Channel (MC) Instrument using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK) and the QC of genotype data was implemented as described by Astle et al. = [@Astle2016]. The imputation panel used was the 1000 genomes phase-3-UK-10K[@Astle2016]. A genetic instrument for BMI was constructed using 654 genetic variants that were associated with BMI at P<5x10^-8^ in the inverse variance weighted fixed-effect meta-analysis of GWAS of 700000 individuals of European ancestry[@Yengo2018]. This meta-analysis consisted of around 250000 adults from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium[@Locke2015] and 450000 adults from the UK Biobank study. Only 0.05 % of UK Biobank participants were included in the current INTERVAL study (of N=2737). These participants were not excluded to increase power. The weighted GRS was made using PLINK 2.0 software[@Purcell2007a] using the effect alleles and beta coefficients from the source GWAS. The score was calculated by multiplying the number of effect alleles at each SNP by its effect estimate (beta), summing these, and dividing by the total number of SNPs included. The GRS therefore can be interpreted as the average per-SNP effect on BMI for each individual. 
+The Affymetrix GeneTitan Multi-Channel (MC) Instrument was used to genotype participants using the UK Biobank Axiom Array (ThermoFisher Scientific, Loughborough, UK). The quality control (QC) of the genetic data has been described in full by Astle et al.[@Astle2016]. The panel used to impute missing genetic data was the 1000 genomes phase-3-UK-10K[@Astle2016]. Genetic variants that were deemed as primary signals from a recent meta-analysis of GWAS for BMI (654 at p<5x10^-8^) were used to make a genetic risk score (GRS). The meta-analysis was conducted on around 700,000 participants of European descent, 250,000 of which were from the Genetic Investigation of ANthromopetric Traits (GIANT) consortium[@Locke2015] and 450,000 from the UK Biobank. This GRS was created using PLINK 2.0[@Purcell2007a], where the effect alleles and betas were obtained from the source GWAS. The score for each participant was calculated by 1) multiplying the number of BMI-increasing SNPs by the beta coefficient of each genetic variant, 2) calculating the sum for all genetic variants, 3) dividing this sum by the number of participants (N). This GRS can be interpreted as the average effect that one SNP has on BMI.
 
 ### Study population
 
