--- a/index/06-chap6.Rmd
+++ b/index/06-chap6.Rmd
@@ -31,7 +31,7 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 ```
 # Exploring the plasma proteome as a link between adiposity and platelet function: Observational and Mendelian randomisation estimates {#BMI-protein-MR}
 
-The work within this chapter has been published in the International Journal of Obesity[@Goudswaard2021]. The preprint of this manuscript is also available on MedRXiV[@Goudswaard2020]. I am the first author of the publication: I performed all analyses, created all figures and tables and wrote the manuscript.
+The work within this chapter has been published in the International Journal of Obesity[@Goudswaard2021]. The preprint of this manuscript is also available on MedRXiV[@Goudswaard2020]. The author accepted manuscript has also been uploaded to the University of Cambridge repository due to requirements from collaborators https://www.repository.cam.ac.uk/handle/1810/328383. I am the first author of the publication: I performed all analyses, created all figures and tables and wrote the manuscript.
 
 Supplementary Tables 1-10 can be found here https://github.com/lucygoudswaard/mythesis/blob/master/index/figure/BMI_protein_INTERVAL/BMI_protein_supplementary_Tables.xlsx 
 
@@ -126,7 +126,7 @@ column_spec(1, width = "6cm") %>%
 
 In a linear regression model adjusted for age and sex among 2729 adults, BMI (per SD higher) was associated with 1576 proteins (39%) at the level P < 1.4 x 10^-5^ (multiple testing reference point, Supplementary Table 3). In a second model additionally adjusting for frequencies of smoking and alcohol intake among 2380 adults, there were 1447 associations at the same reference point (Supplementary Table 4). The strongest positive associations were with leptin (0.74 SD, 95% CI 0.71-0.77, P=9.9x10^-324^) and adipocyte fatty acid binding protein (FABP4) (0.58 SD, 95% CI 0.55-0.62, P=6.4x10^-211^). BMI (per SD) was also strongly positively associated with inflammatory proteins such as Complement Factor I (0.46 SD, 95% CI 0.43-0.50, P=5.6x10^-122^) and CRP (0.44 SD, 95% CI 0.41-0.48, P=8.2x10^-112^). BMI (per SD) also showed strong negative associations with proteins such as insulin-like growth factor-binding protein (IGFBP) 2 (-0.48 SD, 95% CI -0.51 to -0.44, P=2.7x10^-133^) and sex hormone-binding globulin (SHBG) (-0.43 SD, 95% CI -0.47 to -0.39, P=2.4x10^-106^). 
 
-There were 262 unique platelet proteins that were analysed in INTERVAL, 121 were associated with BMI in the confounder adjusted model (46%). There was evidence that proteins involved in platelet pathways were associated with BMI. Higher BMI was negatively associated with antithrombin-III (-0.26 SD, 95% CI -0.30 to -0.22, p=9.6x10^-42^). BMI was also negatively associated with platelet-activating factor acetylhydrolase (PAFAH) (-0.26 SD, 95% CI -0.30 to -0.23, p=4.9x10^-39^), as was platelet endothelial aggregation receptor 1 (PEAR1) (-0.20 SD, 95% CI -0.24 to -0.16, p=1.24x10^-23^).  Other proteins that were negatively associated with BMI include platelet endothelial cell adhesion molecule (PECAM-1), platelet glycoprotein Ib alpha chain (GPIbα) and platelet-derived growth factor receptor beta (PDGF Rb) (Supplementary Table 4 & Supplementary Table 5). BMI was positively associated with the chemokine MDC (0.18 SD, 95% CI 0.14-0.22, p=3.6x10^-21^), but was not associated with TARC (Supplementary Table 3). 
+There were 262 unique platelet proteins that were analysed in INTERVAL, 121 were associated with BMI in the confounder adjusted model (46%). There was evidence that proteins involved in platelet pathways were associated with BMI. Higher BMI was negatively associated with antithrombin-III (-0.26 SD, 95% CI -0.30 to -0.22, p=9.6x10^-42^). BMI was also negatively associated with platelet-activating factor acetylhydrolase (PAFAH) (-0.26 SD, 95% CI -0.30 to -0.23, p=4.9x10^-39^), as was platelet endothelial aggregation receptor 1 (PEAR1) (-0.20 SD, 95% CI -0.24 to -0.16, p=1.24x10^-23^). Other proteins that were negatively associated with BMI include platelet endothelial cell adhesion molecule (PECAM-1), platelet glycoprotein Ib alpha chain (GPIbα) and platelet-derived growth factor receptor beta (PDGF Rb) (Supplementary Table 4 & Supplementary Table 5). BMI was positively associated with the chemokine MDC (0.18 SD, 95% CI 0.14-0.22, p=3.6x10^-21^), but was not associated with TARC (Supplementary Table 3). 
 
 ### Observational associations of covariables with BMI and protein traits
 
@@ -320,7 +320,7 @@ For proteins with stronger MR derived association evidence, it is important to e
 
 Our results help to provide contextualisation for proteins which have already been implicated in disease. For example, results suggest a strong positive effect of BMI on FABP4, an adipokine found primarily in adipocytes and macrophages[@Furuhashi2014]. This MR estimate supports the association which has been suggested in previous observational studies[@Xu2006]. FABP4 has been implicated in cardiometabolic disease: a SNP which increases FABP4 was found to raise the odds of type II diabetes among adults[@Gudmundsdottir2020], potentially through its contribution to higher insulin resistance[@Nakamura2017]. FABP4 has also been associated with higher risk of atherosclerosis among adults[@Yeung2007]. A strong SHBG-lowering effect of higher BMI was also suggested here. The SHBG molecule is a glycoprotein which binds androgens and oestrogens and suppresses their activity[@Wallace2013]; a reduction in SHBG is therefore expected to lead to higher levels of circulating sex hormones. The negative effect of BMI on SHBG seen here supports observational findings[@Cooper2015; @Goto2014; @Baglietto2009]. When evaluating the role of SHBG in disease, MR analysis suggests that an increase in SHBG contributes to a decrease in risk of cardioembolic stroke[@Zheng2020]. Other studies have also implicated lower SHBG levels in increasing type II diabetes risk [@Ritchie2019]. The exact mechanisms leading from decreased SBHG to ill-health is unclear, but may arise as a result of the increased bioavailability of testosterone and oestrogen[@Wallace2013].
 
-There were also a range of platelet proteins which were detected in the plasma (262 proteins). These are proteins which have been linked to platelet GO pathways. The observational analysis detected an inverse association between BMI and platelet proteins, including PAFAH and PEAR1. These estimates were similar in the MR analysis, however the estimates did not pass multiple testing adjustment. Interestingly, higher BMI led to a decrease in levels of these proteins circulating in the plasma. PAFAH is a phospholipase A~2~ enzyme [@Marathe2018]. PAFAH binds to lipoproteins and can degrade platelet activating factor (PAF). The degradation of PAF leads to a reduction in aggregation. PAFAH has been shown to bind to lipoproteins in mice[@Noto2003] and is thought to therefore reduce lipoprotein oxidation, thereby being antiatherogenic. The reduction in PAFAH that was associated with higher BMI could therefore be atherogenic. It is unclear why higher BMI would lead to a reduction in other proteins such as PEAR1. PEAR1 is a transmembrane protein involved in megakaryopoiesis and platelet activation, where it plays a key role in stabilising integrin α~IIb~β~3~[@Kauskot2012]. Lower circulating levels of PEAR1 in participants with higher BMI could be explained by PEAR1 levels being retained more within the platelet (and therefore could lead to platelet hyperactivity). Although alterations in plasma proteins may help understanding of the environment platelets are in, it would be informative to explore the platelet proteome in a cohort as large as INTERVAL, however the material is not available for this analysis. 
+There were also a range of platelet proteins which were detected in the plasma (262 proteins). These are proteins which have been linked to platelet GO pathways. The observational analysis detected an inverse association between BMI and platelet proteins, including PAFAH and PEAR1. These estimates were similar in the MR analysis, however the estimates did not pass multiple testing adjustment. Interestingly, higher BMI led to a decrease in levels of these proteins circulating in the plasma. PAFAH is a phospholipase A~2~ enzyme [@Marathe2018]. PAFAH binds to lipoproteins and can degrade platelet activating factor (PAF) by removing an acetyl group from the molecule[@Lordan2019]. PAF can cause platelet aggregation, therefore the degradation of PAF by PAFAH leads to a reduction in aggregation[@Lordan2019]. Lower PAFAH levels as result of higher BMI would therefore reduce the degradation of PAF and increase platelet aggregation. PAFAH has been shown to bind to lipoproteins in mice[@Noto2003] and is thought to therefore reduce lipoprotein oxidation, thereby being antiatherogenic. The reduction in PAFAH that was associated with higher BMI could therefore be atherogenic. It is unclear why higher BMI would lead to a reduction in other proteins such as PEAR1. PEAR1 is a transmembrane protein involved in megakaryopoiesis and platelet activation, where it is crucial in stabilising integrin α~IIb~β~3~[@Kauskot2012]. Lower circulating levels of PEAR1 in participants with higher BMI could be explained by PEAR1 levels being retained more within the platelet (and therefore could lead to platelet hyperactivity). Although alterations in plasma proteins may help understanding of the environment platelets are in, it would be informative to explore the platelet proteome in a cohort as large as INTERVAL, however the material is not available for this analysis. Other proteins such as IGFBP1/2 were inversely associated with BMI in the observational analysis, with similar magnitudes of estimates in the MR. Although these proteins were not classified as platelet proteins, injecting IGFBP-1 in rats has been shown to reduce free circulating levels of IGF-1[@Lang2003] a molecule which can potentiate the activation of platelets[@Frystyk1995; @Hers2007]. 
 
 The involvement of the chemokines MDC and TARC in platelet function was presented in Chapter \@ref(chemokine-platelets), where there was evidence that they can modulate platelet activation. There was also MR evidence that higher levels of MDC could contribute towards VTE pathophysiology. These chemokines were also included in the SomaLogic panel in the current chapter, therefore the effect of BMI on the circulating levels of these chemokines was explored. MDC was associated with BMI observationally, and the magnitude of effect was similar in the MR, however this estimate did not withstand multiple testing adjustment. It is possible that MDC could be an intermediate in between BMI and platelet function, however this analysis needs to be replicated in a larger cohort. There was no evidence to support TARC as an intermediate. Differences in regulation of MDC and TARC need to be further elucidated.
 
