--- a/index/07-chap7.Rmd
+++ b/index/07-chap7.Rmd
@@ -30,6 +30,7 @@ editor_options:
 source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/packages.R")
 ```
 # Further elucidating the effect of adiposity on the plasma proteome using a weight loss intervention {#BMI-protein-RCT}
+This work has been presented at the International Genetic Epidemiology Society meeting 2021 and the abstract is published in the journal Genetic Epidemiology[@IGES2021]. I am the first author of this abstract and was the presenting author of the work.
 
 ## Background
 
@@ -46,7 +47,7 @@ include_graphics(path = "figure/DiRECT/Thesis_graphic_overview_BMI_protein_CVD.p
 ## Methods
 
 ### Study design and participants
-Samples analysed within this study were collected from participants enrolled in the Diabetes Remission clinical trial (DiRECT). DiRECT was a cluster-randomised trial which took place at 49 primary care practices in Scotland and Tyneside[@Lean2018]. Ethical approval was granted from West 3 Ethics Committee (January, 2014) and the National Health Service (NHS). Participants were recruited between 25th July 2014 and 5th August 2016. Details of the protocol have previously been published[@Leslie2016]. Participants enrolled were between 20-65 years, diagnosed with T2D within previous 6 years, had a BMI of between 27-45kg/m^2^. Participants were excluded if they were: using insulin, had a HbA1c concentration of ≥12 % (≥108 mmol/mol), weight loss of >5 kg in the preceding 6 months, an estimated glomerular filtration rate of <30 mL/min per 1.732 m^2^. Other exclusion criteria include heart failure, participation in other clinical trials, substance abuse, cancer, recent MI (<6 months), learning difficulties, current use of anti-obesity drugs, eating disorders, pregnancy or admission to hospital for depression or use of antipsychotic medication[@Lean2018]. Participants in the control group received best-practice care by guidelines. The intervention group were asked to follow the Counterweight-Plus weight management programme[@Lean2013]. This programme consisted of a total diet replacement (TDR) phase using a low energy diet (825-853 kcal/day) for 3-5 months, followed by structured food reintroduction of 2-8 weeks, with ongoing monthly long-term weight loss maintenance visits. Those in the intervention group had their antidiabetic and antihypertensive drugs discontinued. In total, there were 146 patients in the control group and 119 in the intervention group who remained enrolled in the study at 1 year, as detailed in Figure \@ref(fig:direct-participants).
+Samples analysed within this study were collected from participants enrolled in the Diabetes Remission clinical trial (DiRECT). DiRECT was a cluster-randomised trial which took place at 49 primary care practices in Scotland and Tyneside[@Lean2018]. Ethical approval was granted from West 3 Ethics Committee (January, 2014) and the National Health Service (NHS). Participants were recruited between 25th July 2014 and 5th August 2016. Details of the protocol have previously been published[@Leslie2016]. Participants enrolled were between 20-65 years, diagnosed with T2D within previous 6 years, had a BMI of between 27-45kg/m^2^. Participants were excluded if they were: using insulin, had a HbA1c concentration of ≥12 % (≥108 mmol/mol), more than 5kg weight loss in the preceding six months, an estimated glomerular filtration rate of <30 mL/min per 1.732 m^2^. Other exclusion criteria include malignancy, heart failure, recent MI (<6 months), enrollment in other clinical trials, addiction to illegal drugs, difficulty in understanding the study, current use of drugs to treat obesity, eating disorders, pregnancy or admission to hospital for depression or use of antipsychotic medication[@Lean2018]. Participants in the control group received best-practice care by guidelines. The intervention group followed the Counterweight-Plus weight management programme[@Lean2013]. This programme a involved total diet replacement (TDR) phase using a low energy diet (825-853 kcal/day) for 3-5 months. Following the TDR, there was a structured food reintroduction phase of 2-8 weeks. Participants then attended monthly weight loss maintenance visits. Those in the intervention group had their antidiabetic and antihypertensive drugs discontinued. In total, there were 146 patients in the control group and 119 in the intervention group who remained enrolled in the study at 1 year, as detailed in Figure \@ref(fig:direct-participants).
 
 (ref:scaption-direct) Overview of participants in the DiRECT trial
 (ref:caption-direct) **Overview of participants in the DiRECT trial.** Figure made using BioRender.com.
@@ -226,7 +227,7 @@ platform = c('Mass spectrometry','Olink CVD II, CVD III and inflammation','Mass 
 findings = c('Participants: 43 individuals with obesity before and after 8-week weight loss.
 Total proteins associated: 93/1294,
 Overlapping findings: Weight loss leads to increase in ApoF, ITIH3, SHBG, corticosteroid-binding globulin.',
-'Participants: 609 from the diet intervention examining the factors interacting with treatment success (DIETFITS) study.
+'Participants: 609 from the Diet Intervention Examining The Factors Interacting with Treatment Success (DIETFITS) study.
 Total proteins associated: 130/263 associated with change in BMI.
 Overlapping findings: Changes in IGFBP1/IGFBP2, E-selectin, CD163.',
 'Participants: 473 in the nutritional programme DiOGenes.
