--- a/index/08-chap8.Rmd
+++ b/index/08-chap8.Rmd
@@ -33,16 +33,16 @@ source("~/OneDrive - University of Bristol/PhD/Main project/Thesis/index/package
 
 ## Background
 
-The two previous results chapters (Chapter \@ref(BMI-protein-MR) and Chapter \@ref(BMI-protein-RCT)) aimed to determine the effect of adiposity on circulating proteins by using two different study designs: an MR study which evaluated the effect that prolonged high BMI has on protein levels and an RCT which explored the effect of weight loss through caloric restriction on the plasma proteome. These two studies provided two separate line of evidence for a causal role of adiposity in circulating protein composition. Both studies also provided evidence that the change in circulating proteins may be contributing to the increased risk of disease such as metabolic disease or CVD. There was also  evidence from both studies for an effect of BMI on certain proteins involved in platelet GO pathways, thereby indicating that these protein alterations could impact platelet function and risk of CVD.
+The two previous results chapters (Chapter \@ref(BMI-protein-MR) and Chapter \@ref(BMI-protein-RCT)) aimed to determine the effect of adiposity on circulating proteins by using two different study designs: an MR study which evaluated the effect that prolonged high BMI has on protein levels and an RCT which explored the effect of weight loss through caloric restriction on the plasma proteome. These two studies provided two separate line of evidence for a causal role of adiposity in circulating protein composition. Both studies also provided evidence that the change in circulating proteins may be contributing to the increased risk of disease such as metabolic disease or CVD. There was also evidence from both studies for an effect of BMI on certain proteins involved in platelet GO pathways, thereby indicating that these protein alterations could impact platelet function and risk of CVD.
 
 This overall shift in proteins in each study design provides important information. One of the benefits of having the same proteomics platform in both studies is that there is a large overlap in the number of proteins measured, therefore the MR estimate and RCT estimate can be directly compared. A comparison across the two studies also helps to overcome the biases and limitations of each approach, and both the concordance and divergence in effects across studies provides insight into possible mechanisms. The overall aim of this chapter is to compare BMI-protein effects across MR and RCT study designs and evaluate implications for platelet function and CVD.
 
 ## Methods
-In efforts to further elucidate which proteins are altered by adiposity, a comparison between the BMI-protein associations in INTERVAL (Chapter \@ref(BMI-protein-MR)) and the BMI change-protein change associations in Chapter \@ref(BMI-protein-RCT) was performed. There were 2803 unique proteins (by UniProt ID) which were detected in both INTERVAL and DiRECT. Estimates across the two cohorts were compared using linear regression. To be able to compare whether estimates were similar across study designs, estimates from each analysis were scaled using the scale() function from the "base" R package. This function subtracts the mean from each value and divides by the standard deviation. Estimates were categorised as: "same" if the scaled estimates were within 1 SD of each other; "different" if estimates were more than 1 SD apart and "extreme" if within 1 SD of each other and with an absolute scaled estimate of more than 1 SD. Estimates from both studies were scaled as the beta coefficients for the regression analyses were using different units (INTERVAL units are SD difference in protein per SD higher BMI in a cross-sectional setting, whereas DiRECT is SD change in protein per SD increase in BMI).
-
-The comparison of the magnitude of estimates across studies conveys important information. Firstly, proteins which have a consistent direction across both INTERVAL and DiRECT, as well as having large magnitudes of estimates in both studies provides more compelling evidence for a BMI-driven effect. Secondly, proteins which have consistent evidence across both studies but with small magnitudes of estimates provides evidence that the protein levels are not affected by BMI. The comparison can also highlight disparities in estimates: where there may be evidence from only one study that the protein is altered by BMI. This either points towards effects which are study specific, or possible spurious associations arising in one study. 
+In efforts to further elucidate which proteins are altered by adiposity, a comparison between the BMI-protein associations in INTERVAL (Chapter \@ref(BMI-protein-MR)) and the BMI change-protein change associations in Chapter \@ref(BMI-protein-RCT) was performed. There were 2803 unique proteins (by UniProt ID) which were detected in both INTERVAL and DiRECT. Estimates across the two cohorts were compared using linear regression. The estimate in INTERVAL is the mean difference in protein levels per SD higher BMI in a cross-sectional framework, whereas the estimate in DiRECT is the SD change in protein levels after weight loss. Due to the nature of the output of linear regression, the beta coefficient is the SD change in protein per SD increase in BMI (therefore if weight loss reduces the protein, the beta coefficient is positive). To be able to compare whether estimates were similar across study designs, estimates from each analysis were scaled using the scale() function from the "base" R package. This function subtracts the mean from each value and divides by the standard deviation. Estimates were categorised as: "same" if the scaled estimates were within 1 SD of each other; "different" if estimates were more than 1 SD apart and "extreme" if within 1 SD of each other and with an absolute scaled estimate of more than 1 SD. Estimates from both studies were scaled as the beta coefficients for the regression analyses were using different units (INTERVAL units are SD difference in protein per SD higher BMI in a cross-sectional setting, whereas DiRECT is SD change in protein per SD increase in BMI).
 
 Estimates for the specific proteins involved in platelet GO pathways highlighted in Chapters \@ref(BMI-protein-MR) and \@ref(BMI-protein-RCT) (Supplementary Table 1 https://github.com/lucygoudswaard/mythesis/blob/master/index/figure/BMI_protein_INTERVAL/BMI_protein_supplementary_Tables.xlsx) were also extracted to evaluate the effect of BMI on platelet proteins. Estimates were extracted from the MR in INTERVAL and for the two stage least squares analysis in DiRECT as these were the most robust models.
+
+The comparison of the magnitude of estimates across studies conveys important information. Firstly, proteins which have a consistent direction across both INTERVAL and DiRECT, as well as having large magnitudes of estimates in both studies provides more compelling evidence for a BMI-driven effect. As an example, a positive estimate in both studies indicates that within a population, those with a higher BMI would likely have higher levels of the protein and that if an individual reduces their BMI with caloric restriction it would likely reduce the levels of the protein. Secondly, the comparison conveys proteins which have consistent evidence across both studies but with small magnitudes of estimates provides evidence that the protein levels are not affected by BMI. The comparison can also highlight disparities in estimates: where there may be evidence from only one study that the protein is altered by BMI. This either points towards effects which are study specific, or possible spurious associations arising in one study. 
 
 ## Results
 ### Comparison of BMI effects across DiRECT and INTERVAL
