--- a/index/09-conclusion.Rmd
+++ b/index/09-conclusion.Rmd
@@ -59,13 +59,15 @@ As well as IPC having the potential to be a useful biomarker, the targeted appro
 
 The BMI and proteome analyses suggested that various plasma proteins could also be biomarkers in patients with obesity who may be at a greater risk of cardiovascular events and metabolic disease. Using MR, various proteins altered by BMI as shown in Chapter \@ref(BMI-protein-MR) have been implicated in disease. For example, in work by Constantinescu et al. (unpublished), analyses suggested that certain proteins altered with BMI may have a causal role in DVT, including INHBC. Other proteins such as SHBG have been implicated in T2D. Proteins such as INHBC and SHBG could therefore be therapeutic targets. Proteins which are altered with weight loss on the plasma proteome also indicates potential proteins which may be have a role in reducing the disease risk associated with weight loss. The comparison across both studies indicates proteins which are altered with BMI in both study designs and therefore may be the most suitable targets for pharmacological intervention.
 
+## Possible mechanisms of effects
+It is unclear how these associations fit together and whether they are truly part of the same pathway. My hypothesis is that higher BMI alters the circulating composition of proteins. This global change in protein composition exerts effects on other blood cells in the local environment such as platelets. Megakaryocytes which are situated in the bone marrow may respond to this change in protein environment, where there is an increase in proliferation into platelets, therefore raising levels of IPC. A simultaneous reduction in proteins such as PAFAH and IGFBP1, along with increases in other proteins such as Complement C5 would likely lead to greater platelet activation and contribute to the progression of CVD. It is important to note that causality was not explored between protein levels and IPC, therefore it is possible that a change in IPC could lie before protein changes within the pathway. However, the ability of proteins such as the chemokines MDC and TARC to activate platelet, as demonstrated in this thesis, highlights that it may be more likely the protein change is upstream of platelet alterations. A common theme among proteins altered with BMI is that they are proteins which have a key role in regulating the levels of another protein. This is the case for SHBG, IGFBPs and PAFAH. 
+
 ## Strengths 
 As previously mentioned, this thesis has approached hypotheses using a range of study designs. Integrating clinical studies, basic science, cohort studies and trial data has been crucial to further understand the role of BMI in platelet function. Orthogonal evidence is when findings are replicated more than one study design. This thesis has provided orthogonal evidence such as through use of MR along with a weight loss RCT to determine effects of BMI on the plasma proteome. This is therefore a major strength of the current research. Using a combination of study designs is crucial to determine causal effects.
 
-One of the major benefits of these techniques are that they are in line with the principles of the 3Rs (replacement, reduction and refinement). The thesis has made use of available human data from various cohorts to avoid use of animals in research (replacement).
+One of the major benefits of these techniques is that they are in line with the principles of the 3Rs (replacement, reduction and refinement). The thesis has made use of available human data from various cohorts to avoid use of animals in research (replacement). Mouse models could have been used to explore the effect of obesity on platelet characteristics and platelet function. However, instead of this, a human patient study was designed and platelet data was obtained from both a healthy cohort as well as a cohort with a history of cardiovascular disease. Obtaining blood from humans over mice is preferable as 1) they are able to consent, 2) obtaining large blood volumes for experiments is not lethal and 3) mice have less genetic overlap therefore findings may not always relate to humans.
 
 ## Limitations
-
 The limitations in this section are ordered by results chapter.
 
 Although efforts were made to examine all of the associations within the pathway in Figure \@ref(fig:Thesis-schematic-chaps), this was only possible where there was available data or where it was possible to address hypotheses with specifically designed clinical or basic science experiments. Certain analyses were therefore limited by a lack of data. For example, it would have been beneficial to have platelet function measured within the INTERVAL cohort as this would have made it possible to do a one sample MR for BMI to platelet function, and the plasma proteome findings could have been directly compared to platelet function. Although platelet function data is not available on this scale, cohorts such as the Framingham Heart Study (FHS) have platelet function data for ~3,000 participants[@Rodriguez2020]. As they also have genetic data, it would be beneficial to perform a one sample MR for BMI to platelet function. The association between IPC and platelet function would benefit from being replicated in a larger cohort who are free from major disease such as the FHS, however this study does not have IPC measured.
